# LaoTTS

./: .gitignore  Readme.md  tts_lao.py
.devcontainer/: devcontainer.json
build_tts_engine_container/: compose.yml
lao_tts_engine/: .dockerignore  DockerFile  main.py  pyproject.toml  requirements.txt  tts_engine.py  tts_lao.py
lao_tts_engine/module_config/: prepare_module.sh  pyproject.toml  requirements.txt
lao_tts_engine/modules/preprocessing/lao_number_sounds/: lao_number_sounds.py
