[tool.poetry]
name = "makerbox-tts-frontend"
version = "0.1.0"
description = "A Streamlit frontend for the Lao TTS model."
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.40.1"
torch = "2.5.1"  
torchaudio = "2.5.1"  
transformers = {extras = ["torch"], version = "4.46.2"}  


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
