[tool.poetry]
name = "makerbox-tts-frontend"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.40.1"
torch = "2.7.1"  
transformers = "4.52.4"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
